--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -1,7 +1,7 @@
 @import "./normalize.css";
 :root{
     --color-text:#666;
-    --color-text-text:#ff5777;
+    --color-high-text:#ff5777;
     --color-tint:#ff8198;
     --color-background:#fff;
     --font-size:14px;
